fixed alignment issues

--- a/styles/mirror_lakes.css
+++ b/styles/mirror_lakes.css
@@ -39,6 +39,11 @@ font-size: 15px;
     border: 1px solid black;
 }
 
+.pine-logo{
+    display: flex;
+    flex-direction: row; 
+    justify-content: center;
+}
 
 /* #header-bar{
 } */
@@ -79,11 +84,8 @@ font-size: 15px;
 #gallery-summary{
 }*/
 
-#image-gallery{
-    min-height: 15%;
-    max-height: 100%;
-    min-width: 15%;
-    max-width: 100%;    
+#gallery{
+    height: 400px; 
 }
 
 /*
